# bot-ification

./: README.md  bot.py  commit_dates.csv  crystal-github.csv  generate_commit_dates.py  old_bot.py  pyproject.toml
